--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#proyectos">Proyectos</a>
                 <a href="#contacto">Contacto</a>
             </div>
-            <a class="btn ghost" href="mailto:gabrielracciatti123@gmail.com">Hablemos</a>
+            <a class="btn ghost" href="https://mail.google.com/mail/?view=cm&to=gabrielracciatti123@gmail.com&su=Contacto">Hablemos</a>
         </div>
     </nav>
 
@@ -41,7 +41,7 @@
                     <p class="hero-mini-text">Actualmente ampliando mis conocimientos en desarrollo backend y automatización.</p>
                     <div class="hero-ctas">
                         <a class="btn primary" href="#proyectos"><i class="fas fa-code"></i> Ver proyectos</a>
-                        <a class="btn secondary" href="mailto:gabrielracciatti123@gmail.com"><i class="fas fa-paper-plane"></i> Contáctame</a>
+                        <a class="btn secondary" href="https://mail.google.com/mail/?view=cm&to=gabrielracciatti123@gmail.com&su=Contacto"><i class="fas fa-paper-plane"></i> Contáctame</a>
                     </div>
                     <div class="hero-stats">
                         <div>
@@ -230,7 +230,7 @@
                     </p>
                     <div class="contact-links">
                         <a href="tel:+5492915082493"><i class="fas fa-phone"></i> +54 9 291 5082493</a>
-                        <a href="mailto:gabrielracciatti123@gmail.com"><i class="fas fa-envelope"></i> gabrielracciatti123@gmail.com</a>
+                        <a href="https://mail.google.com/mail/?view=cm&to=gabrielracciatti123@gmail.com&su=Contacto"><i class="fas fa-envelope"></i> gabrielracciatti123@gmail.com</a>
                     </div>
                     <div class="contact-socials">
                         <a href="https://github.com/GaboRacciatti" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
@@ -238,7 +238,7 @@
                     </div>
                 </div>
                 <div class="contact-actions">
-                    <a class="btn primary xl" href="mailto:gabrielracciatti123@gmail.com"><i class="fas fa-paper-plane"></i> Contactar</a>
+                    <a class="btn primary xl" href="https://mail.google.com/mail/?view=cm&to=gabrielracciatti123@gmail.com&su=Contacto"><i class="fas fa-paper-plane"></i> Contactar</a>
                     <a class="btn ghost xl" href="docs/cv-gabriel-racciatti.pdf" download><i class="fas fa-file-download"></i> Descargar CV</a>
                     <p class="contact-availability"><i class="fas fa-circle"></i> Disponible para trabajar</p>
                 </div>
